Create JavaFX application